<resources>
    <string name="app_name">RickAndMortyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_characters">All Characters</string>
    <string name="all_episodes">All Episodes</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="search_character">Search Character</string>
</resources>